--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,22 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Alias"
+            android:textAlignment="center"/>
+        <EditText
+            android:layout_width="276dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/alias"/>
+
+    </LinearLayout>
 
 
 
